clang/test/BSC/Negative/OwnedStruct/memoryleak/destructor/desturctor-param.cbs
// RUN: %clang_cc1 -verify %s
_Owned struct A {
    _Public:
    int * _Owned a;
    ~A(A this) {
    } // expected-error {{destructor for`_Owned struct A` incorrect, this.a is of _Owned type and needs to be handled manually}}
};
int main() {
    int local = 1;
    A a ={ .a = __take_from_raw(&local) };
    return 0;
}
